--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-hook-form": "^7.52.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "styled-components": "^6.1.12",
     "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.0",
