--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "axios": "^1.7.3",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
+    "react-time-picker": "^7.0.0",
     "recharts": "^2.12.7",
     "styled-components": "^6.1.12",
     "styled-reset": "^4.5.2",
